--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "supabase": "^2.58.5",
     "tailwindcss": "^4.0.0-alpha.31",
     "typescript": "^5"
   }
